Horizontal scrolling in mobile devices fixed

--- a/src/components/FinalRewards/finalrewards.css
+++ b/src/components/FinalRewards/finalrewards.css
@@ -364,6 +364,10 @@
     height: 100%;
   }
 
+  ._final_reward_info_path {
+    display: none;
+  }
+
   ._reward_details_container {
     width: 100%;
     position: relative;
