--- a/src/components/SectionPaths/sectionpath5.css
+++ b/src/components/SectionPaths/sectionpath5.css
@@ -8,3 +8,9 @@ svg:not(:root) {
   overflow: hidden;
   display: block;
 }
+
+@media screen and (max-width: 560px) {
+  ._timeline_section_path_5 {
+    display: none;
+  }
+}
